[tool.poetry]
name = "mysite-blog"
version = "0.1.0"
description = "My blog"
authors = ["kashmir <kuznetcov.alekcey@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
